Working on the VentGasComponent