@@ -1,6 +1,6 @@
 package bomb.modules.t.translated.solutions.password;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 public class Password {
@@ -16,7 +16,9 @@ public class Password {
 
     public static List<String> getPasswords(String[] letterSets) {
         if (passwords == null) throw new IllegalArgumentException("Please set a language to start");
-        List<String> outputPasswords = Arrays.asList(passwords.clone());
+        if (areAllEmpty(letterSets)) return new ArrayList<>();
+
+        List<String> outputPasswords = new ArrayList<>(List.of(passwords.clone()));
 
         for (int i = 0; i < letterSets.length; i++) {
             if (!letterSets[i].isEmpty())
@@ -31,7 +33,15 @@ public class Password {
 
     private static void filterByLetterSet(List<String> passwordList, String letterSet, int index) {
         passwordList.removeIf(password ->
-                letterSet.indexOf(password.charAt(index)) != -1
+                letterSet.indexOf(password.charAt(index)) == -1
         );
+    }
+
+    private static boolean areAllEmpty(String[] arrays) {
+        for (String instance : arrays) {
+            if (!instance.isEmpty())
+                return false;
+        }
+        return true;
     }
 }
